k8s/ingress/01-n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  labels:
    app.kubernetes.io/name: 'n8n'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: 'latest'
    app.kubernetes.io/part-of: 'n8n'
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: n8n.ginga.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: n8n-service-deployment
            port:
              number: 80
  tls:
  - hosts:
    - n8n.ginga.io
    secretName: n8n-ginga-io-tls
